  21 Oct 2020;  <chymera@gentoo.org> -ChangeLog:
  games-strategy/julius: no longer tracking superfluous ChangLog