@@ -1,2 +1,5 @@
+  21 Oct 2020;  <chymera@gentoo.org> julius-1.3.1.ebuild, julius-1.4.1.ebuild:
+  games-strategy/julius: eclass update
+
   21 Oct 2020;  <chymera@gentoo.org> -ChangeLog:
   games-strategy/julius: no longer tracking superfluous ChangLog
